# iceberg-compaction

./: .gitignore  Cargo.toml  README.md
core/: Cargo.toml
core/src/: lib.rs
core/src/common/: metrics.rs
core/src/compaction/: auto.rs  mod.rs
core/src/config/: mod.rs
core/src/expire_snapshots/: mod.rs
core/src/file_selection/: strategy.rs
core/src/manifest_rewrite/: mod.rs
core/src/remove_orphan_files/: mod.rs
docs/: python-bindings.md
examples/biglake-metastore-rest-catalog/: Cargo.toml
examples/biglake-metastore-rest-catalog/src/: main.rs
python/: Cargo.toml  Makefile  pyproject.toml
python/examples/: biglake_metastore_rest_catalog.py
python/python/iceberg_compaction/: __init__.py
python/src/: catalog.rs  compaction.rs  error.rs  expire_snapshots.rs  lib.rs  manifest_rewrite.rs  remove_orphan_files.rs
python/tests/: __init__.py  conftest.py  test_catalogs.py  test_configs.py  test_error_mapping.py  test_exceptions.py  test_integration.py  test_operations.py  test_protocols.py  test_results.py
