[workspace]
resolver = "2"
members = [
    "core",
    "python",
    "examples/biglake-metastore-rest-catalog",
    "examples/memory-catalog",
    "examples/rest-catalog",
    "integration-tests",
]

[workspace.dependencies]
# Async runtime and utilities
async-stream = "0.3.5"
async-trait = "0.1.89"
gcp_auth = "0.12"
rustls = { version = "0.23", features = ["aws-lc-rs"] }

# Data processing and storage
ctor = "0.2.8"
datafusion = "52.2"

# Local workspace members
futures = "0.3.17"
iceberg = { git = "https://github.com/tuantran0910/rw-iceberg-rust.git", rev = "bc7133f819afb58a28b5509c8f59d2c3cff4b777", features = [
    "storage-s3",
    "storage-gcs",
    "storage-azblob",
    "storage-azdls",
] }
iceberg-catalog-glue = { git = "https://github.com/tuantran0910/rw-iceberg-rust.git", rev = "bc7133f819afb58a28b5509c8f59d2c3cff4b777" }
iceberg-catalog-hms = { git = "https://github.com/tuantran0910/rw-iceberg-rust.git", rev = "bc7133f819afb58a28b5509c8f59d2c3cff4b777" }
iceberg-catalog-memory = { git = "https://github.com/tuantran0910/rw-iceberg-rust.git", rev = "bc7133f819afb58a28b5509c8f59d2c3cff4b777" }
iceberg-catalog-rest = { git = "https://github.com/tuantran0910/rw-iceberg-rust.git", rev = "bc7133f819afb58a28b5509c8f59d2c3cff4b777" }
iceberg-catalog-s3tables = { git = "https://github.com/tuantran0910/rw-iceberg-rust.git", rev = "bc7133f819afb58a28b5509c8f59d2c3cff4b777" }
iceberg-compaction-core = { path = "./core" }
iceberg-datafusion = { git = "https://github.com/tuantran0910/rw-iceberg-rust.git", rev = "bc7133f819afb58a28b5509c8f59d2c3cff4b777" }

parquet = { version = "57.1", features = ["async"] }
port_scanner = "0.1.5"
rand = "0.9.0"

# Utilities
tempfile = "3.8"

# Error handling
thiserror = "2.0.11"
tokio = { version = "1", default-features = false }
tracing = "0.1"
url = "2"
uuid = "1.0"

[workspace.lints.clippy]
uninlined_format_args = "allow"
dbg_macro = "warn"
disallowed_methods = "warn"
disallowed_types = "warn"
doc_markdown = "warn"
explicit_into_iter_loop = "warn"
explicit_iter_loop = "warn"
inconsistent_struct_constructor = "warn"
unused_async = "warn"
map_flatten = "warn"
await_holding_lock = "warn"
# For private code, this is a little pedantic and not worth fixing.
# &Vec or &String is acceptable
ptr_arg = "allow"
# a little pedantic
get_first = "allow"
new_without_default = "allow"
# TODO: remove later https://github.com/rust-lang/rust-clippy/issues/12537
# duplicated_attributes = "allow"
# TODO: remove later https://github.com/rust-lang/rust-clippy/issues/12436
mixed_attributes_style = "allow"
too_long_first_doc_paragraph = "allow"
str_to_string = "warn"
string_to_string = "warn"

# TODO: this makes sense, but it's too noisy for now (2025-03-10)
large_enum_variant = "allow"
# TODO: this makes sense, but it's too noisy for now (2025-03-10)
result_large_err = "allow"
