[package]
name = "iceberg-compaction-core"
version = "0.1.0"
edition = "2024"

[dependencies]
async-stream = { workspace = true }
async-trait = { workspace = true }
backon = "1.2.0"
ctor = { workspace = true }
datafusion = { workspace = true }
derive_builder = "0.20"
futures = { workspace = true }
iceberg = { workspace = true }
iceberg-catalog-glue = { workspace = true }
# iceberg-catalog-memory = { workspace = true }
iceberg-catalog-rest = { workspace = true }
iceberg-datafusion = { workspace = true }
itertools = "0.13.0"
mixtrics = "0.2.0"
parquet = { workspace = true }
port_scanner = { workspace = true }
rand = { workspace = true }
serde = { version = "1.0", features = ["derive"] }
sqlx = { version = "0.8.2", default-features = false, features = [
	"bigdecimal",
	"chrono",
	"json",
	"mysql",
	"postgres",
	"runtime-tokio-native-tls",
	"rust_decimal",
	"sqlite",
	"time",
	"uuid",
] }
tempfile = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
url = { workspace = true }
uuid = { workspace = true }

[lints]
workspace = true
